[tool.poetry]
name = "data-gateway-sessions"
version = "0.1.0"
description = ""
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"
packages = [{include = "data_gateway_sessions"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aerosense-tools = {git = "https://github.com/aerosense-ai/aerosense-tools.git", rev = "0.10.1"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
